--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,8 +1,8 @@
-name: PHP Tiap 4 Jam Lewat 2 Menit WIB
+name: PHP Tiap 2 Jam Lewat 2 Menit WIB
 
 on:
   schedule:
-    - cron: '2 0,4,8,12,16,20 * * *'  # UTC: 07:02, 11:02, 15:02, 19:02, 23:02, 03:02 WIB
+    - cron: '2 1,3,5,7,9,11,13,15,17,19,21,23 * * *'
   workflow_dispatch:
 
 jobs:
